[package]
name = "de_gui"
version = "0.1.0-dev"
edition = "2021"
authors = ["Martin Indra <martin.indra@mgn.cz>"]
repository = "https://github.com/Indy2222/Digital-Extinction"

[dependencies]
# DE
de_core = { path = "../core", version = "0.1.0-dev" }
de_map = { path = "../map", version = "0.1.0-dev" }

# Other
bevy = "0.7"
bevy_egui = "0.14"
iyes_loopless = "0.5.1"
glam = "0.20.2"
rgb = "0.8.32"
wgpu = "0.12.0"
