[package]
name = "de_lobby"
readme = "README.md"
description = "Digital Extinction lobby server."

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
# DE
de_lobby_model.workspace = true

# Other
actix-web = "4.2.1"
actix-web-httpauth = "0.8.0"
anyhow = "1.0.66"
base64 = "0.13.1"
env_logger = "0.10.0"
futures-util = "0.3.25"
jsonwebtoken = "8.1.1"
log = "0.4.17"
mime = "0.3.16"
pbkdf2 = { version = "0.11.0", features = ["std"] }
rand_core = { version = "0.6", features = ["std"] }
sea-orm = { version = "0.11.0", features = [ "sqlx-postgres", "runtime-actix-rustls", "macros" ] }
serde = { version = "1.0", features = ["derive"] }
subtle = "2.4.1"
thiserror = "1.0"
